--- a/dist.ini
+++ b/dist.ini
@@ -7,3 +7,32 @@ copyright_year   = 2011
 version = 0.001
 
 [@Basic]
+
+;Meta information
+[AutoPrereqs]
+[MetaJSON]
+[MetaResources]
+[MetaConfig]
+[Repository]
+[Bugtracker]
+[MinimumPerl]
+
+;Munging
+[PodWeaver]
+[PkgVersion]
+[Prepender]
+
+;Testing
+;[CriticTests]
+[PodSyntaxTests]
+[PodCoverageTests]
+[KwaliteeTests]
+
+;Releasimg
+[NextRelease]
+[Signature]
+[CheckChangesHasContent]
+[Git::Check]
+[Git::Commit]
+[Git::Tag]
+;[Git::Push]
