--- a/dist.ini
+++ b/dist.ini
@@ -4,30 +4,5 @@ license = Perl_5
 copyright_holder = Leon Timmermans
 copyright_year   = 2011
 
-[@Basic]
-
-;Meta information
-[AutoPrereqs]
-[MetaJSON]
-[MetaResources]
-[Repository]
-[Bugtracker]
-[MinimumPerl]
-
-;Munging
-[PodWeaver]
-[PkgVersion]
-[Prepender]
-
-;Testing
-;[CriticTests]
-[PodSyntaxTests]
-[PodCoverageTests]
-[KwaliteeTests]
-
-;Releasing
-[NextRelease]
-[Signature]
-[CheckChangesHasContent]
-[@Git]
-[Git::NextVersion]
+[@LEONT]
+install_tool = mbt
